User message form added

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,16 +62,16 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">{% trans 'Home' %}</a></li>
-								<li><a href="about.html">{% trans 'About' %}</a></li>
-								<li><a href="shop.html">{% trans 'Shop' %}</a>
+								<li class="current-list-item"><a href="/">{% trans 'Home' %}</a></li>
+								<li><a href="about">{% trans 'About' %}</a></li>
+								<li><a href="shop">{% trans 'Shop' %}</a>
 									<ul class="sub-menu">
 										<li><a href="shop.html">{% trans 'Shop' %}</a></li>
 										<li><a href="checkout.html">{% trans 'Check Out' %}</a></li>
 										<li><a href="cart.html">{% trans 'Cart' %}</a></li>
 									</ul>
 								</li>
-								<li><a href="contact.html">{% trans 'Contact' %}</a></li>
+								<li><a href="contact">{% trans 'Contact' %}</a></li>
 
 								<li>
 									<div class="header-icons">
@@ -172,10 +172,10 @@
 					<div class="footer-box pages">
 						<h2 class="widget-title">Pages</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="services.html">Shop</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="/">Home</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="shop">Shop</a></li>
+							<li><a href="contact">Contact</a></li>
 						</ul>
 					</div>
 				</div>
