--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,8 +11,8 @@
                         <p class="subtitle">{{ info.main_title_line_1 }}</p>
                         <h1>{{ info.main_title_line_2 }}</h1>
                         <div class="hero-btns">
-                            <a href="shop.html" class="boxed-btn">Our products</a>
-                            <a href="contact.html" class="bordered-btn">Contact Us</a>
+                            <a href="shop" class="boxed-btn">Our products</a>
+                            <a href="contact" class="bordered-btn">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     </div>
                     <h3>{{ product.name }}</h3>
                     <p class="product-price"><span>Per {{ product.unit }}</span> {{ product.price }}$ </p>
-                    <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+                    <a href={{ product.slug }} class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
                 </div>
             </div>
                 {% endif %}
@@ -128,7 +128,7 @@
                     <h2><span class="orange-text"> {{ about.title_line_2 }} </span></h2>
                     <p>{{ about.paragraph_1 }}</p>
                     <p>{{ about.paragraph_1 }}</p>
-                    <a href="about.html" class="boxed-btn mt-4">know more</a>
+                    <a href="about" class="boxed-btn mt-4">know more</a>
                 </div>
             </div>
         </div>
