--- a/templates/index.html
+++ b/templates/index.html
@@ -174,7 +174,7 @@
 						<ul>
 							<li><a href="/">Home</a></li>
 							<li><a href="about">About</a></li>
-							<li><a href="shop">Shop</a></li>
+							<li><a href="''/shop">Shop</a></li>
 							<li><a href="contact">Contact</a></li>
 						</ul>
 					</div>
