--- a/main/templates/main/single-product.html
+++ b/main/templates/main/single-product.html
@@ -69,11 +69,11 @@
                         <div class="col-lg-4 col-md-6 text-center">
                             <div class="single-product-item">
                                 <div class="product-image">
-                                    <a href="single-product.html"><img src={{ product.photo.url }} alt=""></a>
+                                    <a href={{ product.slug }}><img src={{ product.photo.url }} alt=""></a>
                                 </div>
                                 <h3>{{ product.name }}</h3>
                                 <p class="product-price"><span>Per {{ product.unit }}</span> {{ product.price }}$ </p>
-                                <a href={{ product.slug }} class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+                                <a href="" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
                             </div>
                         </div>
                      {% endif %}
