--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -439,8 +439,9 @@ a.read-more-btn:hover {
   color: #F28123;
 }
 
-a.boxed-btn, a.bordered-btn, a.cart-btn {
+a.boxed-btn, a.bordered-btn, button.cart-btn, a.cart-btn {
   border-radius: 50px;
+  border-color: transparent;
 }
 
 .section-title h3 {
@@ -1237,13 +1238,13 @@ div.owl-controls div.owl-nav div:hover {
   box-shadow: none;
 }
 
-a.cart-btn {
+button.cart-btn, a.cart-btn {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
 }
 
-a.cart-btn:hover {
+button.cart-btn:hover, a.cart-btn:hover {
   background-color: #051922;
   color: #F28123;
 }
@@ -2436,7 +2437,7 @@ p.product-price span {
   font-weight: 400;
 }
 
-a.cart-btn {
+button.cart-btn, a.cart-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
   background-color: #F28123;
@@ -2444,7 +2445,11 @@ a.cart-btn {
   padding: 10px 20px;
 }
 
-a.cart-btn i {
+button.cart-btn{
+  margin-left: 30px;
+}
+
+button.cart-btn i {
   margin-right: 5px;
 }
 
@@ -2489,7 +2494,7 @@ input[type="number"] {
   margin-bottom: 15px;
 }
 
-.single-product-form a.cart-btn {
+.single-product-form button.cart-btn, a.cart-btn {
   margin-bottom: 15px;
 }
 
