--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -47,7 +47,6 @@
                                              {{ item.update_quantity_form.quantity }}
                                              {{ item.update_quantity_form.update }}
                                             <button class="cart-btn">update</button>
-{#                                            <input type="submit" value="update">#}
                                             {% csrf_token %}
                                         </form>
                                     </td>
@@ -77,7 +76,7 @@
 							</tbody>
 						</table>
 						<div class="cart-buttons">
-                            <a href="cart.html" class="boxed-btn">Update Cart</a>
+                            <a href="shop" class="boxed-btn">Shop more</a>
 							<a href="#" class="boxed-btn black">Check Out</a>
 						</div>
 					</div>
