--- a/main/templates/main/shop.html
+++ b/main/templates/main/shop.html
@@ -42,7 +42,7 @@
 						</div>
 						<h3>{{ product.name }}</h3>
 						<p class="product-price"><span>Per {{ product.unit }}</span> {{ product.price }}$ </p>
-						<a href="" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+						<a href={{ product.slug }} class="cart-btn"><i class="fas fa-shopping-cart"></i> Order </a>
 					</div>
 				</div>
 				{% endfor %}
