--- a/main/templates/main/single-product.html
+++ b/main/templates/main/single-product.html
@@ -30,7 +30,6 @@
 					<div class="single-product-content">
 						<h3>{{ product.name }}</h3>
 						<p class="single-product-pricing"><span>Per {{ product.unit }}</span> ${{ product.price }}</p>
-						<p>{{ product.description|safe }}</p>
 						<div class="single-product-form">
     						<form action="{% url "cart:cart_add" product.id %}" method="post">
                                 {{ cart_product_form }}
@@ -39,13 +38,7 @@
                             </form>
 							<p><strong>Category: </strong>{{ product.category }}</p>
 						</div>
-						<h4>Share:</h4>
-						<ul class="product-share">
-							<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href=""><i class="fab fa-twitter"></i></a></li>
-							<li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
-							<li><a href=""><i class="fab fa-linkedin"></i></a></li>
-						</ul>
+                        <p>{{ product.description|safe }}</p>
 					</div>
 				</div>
 			</div>
@@ -74,7 +67,7 @@
                                 </div>
                                 <h3>{{ product.name }}</h3>
                                 <p class="product-price"><span>Per {{ product.unit }}</span> {{ product.price }}$ </p>
-                                <a href="" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+                                <a href={{ product.slug }} class="cart-btn"><i class="fas fa-shopping-cart"></i> Order </a>
                             </div>
                         </div>
                      {% endif %}
