--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>FRUIT</title>
+	<title>{{ info.brand_name }}</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href={% static "assets/img/favicon.png" %}>
@@ -53,7 +53,7 @@
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-							<a href="#">
+							<a href="/">
 								<img src={{ info.brand_logo.url }} alt="logo">
 							</a>
 						</div>
@@ -66,9 +66,9 @@
 								<li><a href="about">{% trans 'About' %}</a></li>
 								<li><a href="shop">{% trans 'Shop' %}</a>
 									<ul class="sub-menu">
-										<li><a href="shop.html">{% trans 'Shop' %}</a></li>
+										<li><a href="shop">{% trans 'Shop' %}</a></li>
 										<li><a href="checkout.html">{% trans 'Check Out' %}</a></li>
-										<li><a href="cart.html">{% trans 'Cart' %}</a></li>
+										<li><a href="cart">{% trans 'Cart' %}</a></li>
 									</ul>
 								</li>
 								<li><a href="contact">{% trans 'Contact' %}</a></li>
@@ -84,12 +84,11 @@
                                             {% endif %}
                                             {% endwith %}
                                         </a>
-										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
-									    <!--Language select form-->
+										<!--Language select form-->
                                         <form action="{% url 'set_language' %}" method="post">
                                             {% csrf_token %}
                                             <input name="next" type="hidden" value="{{ redirect_to }}">
-                                            <select style="background-color: #330000; color: #e6a756; border-color: transparent" name="language">
+                                            <select name="language">
                                                 {% get_current_language as LANGUAGE_CODE %}
                                                 {% get_available_languages as LANGUAGES %}
                                                 {% get_language_info_list for LANGUAGES as languages %}
@@ -100,7 +99,7 @@
                                                     </option>
                                                 {% endfor %}
                                             </select>
-                                            <input style="background-color: #330000; color: #e6a756; border-color: transparent " type="submit" value="Go">
+                                            <input class="trans-btn" type="submit" value="go">
                                         </form>
                                     </div>
 								</li>
@@ -182,7 +181,7 @@
 						<ul>
 							<li><a href="/">Home</a></li>
 							<li><a href="about">About</a></li>
-							<li><a href="''/shop">Shop</a></li>
+							<li><a href="shop">Shop</a></li>
 							<li><a href="contact">Contact</a></li>
 						</ul>
 					</div>
@@ -214,11 +213,10 @@
 				<div class="col-lg-6 text-right col-md-12">
 					<div class="social-icons">
 						<ul>
-							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+							<li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.linkedin.com/login/ru" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 						</ul>
 					</div>
 				</div>
