--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load i18n %}
 
 {% block content %}
 	<!-- breadcrumb-section -->
@@ -7,8 +8,8 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>{{ about.about_title_line_1 }}</p>
-						<h1>{{ about_title_line_2 }}</h1>
+						<p>{{ about.title_line_1 }}</p>
+						<h1>{{ about.title_line_2 }}</h1>
 					</div>
 				</div>
 			</div>
@@ -22,7 +23,7 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="featured-text">
-						<h2 class="pb-3">Why <span class="orange-text">{{ info.brand_name }}</span></h2>
+						<h2 class="pb-3">{% trans "Why" %} <span class="orange-text">{{ info.brand_name }}</span></h2>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
