--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load i18n %}
 
 {% block content %}
 	<!-- breadcrumb-section -->
@@ -37,22 +38,22 @@
                                 {{ message.subject}}
 							</p>
 							<p>{{ message.message}}</p>
-							<p><input type="submit" value="Submit"></p>
+							<p><input type="submit" value="{% trans "Submit" %}"></p>
 						</form>
 					</div>
 				</div>
 				<div class="col-lg-4">
 					<div class="contact-form-wrap">
 						<div class="contact-form-box">
-							<h4><i class="fas fa-map"></i> Shop Address</h4>
+							<h4><i class="fas fa-map"></i> {% trans "Shop Address" %}</h4>
 							<p>{{ contacts.address|safe }}</p>
 						</div>
 						<div class="contact-form-box">
-							<h4><i class="far fa-clock"></i> Shop Hours</h4>
+							<h4><i class="far fa-clock"></i> {% trans "Shop Hours" %}</h4>
 							<p>{{ contacts.open_hours|safe }}</p>
 						</div>
 						<div class="contact-form-box">
-							<h4><i class="fas fa-address-book"></i> Contact</h4>
+							<h4><i class="fas fa-address-book"></i> {% trans "Contact" %}</h4>
 							<p>{{ contacts.contact|safe }}</p>
 						</div>
 					</div>
