--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="/">{% trans 'Home' %}</a></li>
+								<li><a href="/">{% trans 'Home' %}</a></li>
 								<li><a href="about">{% trans 'About' %}</a></li>
 								<li><a href="shop">{% trans 'Shop' %}</a></li>
 								<li><a href="contact">{% trans 'Contact' %}</a></li>
@@ -72,9 +72,9 @@
 										<a class="shopping-cart" href="cart"><i class="fas fa-shopping-cart"></i>
                                             {% with total_items=cart|length %}
                                             {% if cart|length > 0 %}
-                                            In cart: {{ total_items }} products, {{ cart.get_total_price }} USD
+                                            {% trans "In cart:" %} {% trans "products for" %} {{ cart.get_total_price }} USD
                                             {% else %}
-                                            Empty cart
+                                            {% trans "Empty cart" %}
                                             {% endif %}
                                             {% endwith %}
                                         </a>
@@ -93,7 +93,7 @@
                                                     </option>
                                                 {% endfor %}
                                             </select>
-                                            <input class="trans-btn" type="submit" value="go">
+                                            <input class="trans-btn" type="submit" value="{% trans 'Ok' %}">
                                         </form>
                                     </div>
 								</li>
@@ -109,25 +109,6 @@
 		</div>
 	</div>
 	<!-- end header -->
-	
-	<!-- search area -->
-	<div class="search-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<span class="close-btn"><i class="fas fa-window-close"></i></span>
-					<div class="search-bar">
-						<div class="search-bar-tablecell">
-							<h3>Search For:</h3>
-							<input type="text" placeholder="Keywords">
-							<button type="submit">Search <i class="fas fa-search"></i></button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end search area -->
 
     {% block content %}
     {% endblock %}
@@ -156,13 +137,13 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">About us</h2>
+						<h2 class="widget-title">{% trans "About us" %}</h2>
 						<p>{{ contacts.about_short }}</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
-						<h2 class="widget-title">Get in Touch</h2>
+						<h2 class="widget-title">{% trans "Get in Touch" %}</h2>
 						<ul>
 							<li>{{ contacts.address|safe }}</li>
 							<li>{{ contacts.contact|safe }}</li>
@@ -171,18 +152,18 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box pages">
-						<h2 class="widget-title">Pages</h2>
+						<h2 class="widget-title">{% trans "Pages" %}</h2>
 						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="about">About</a></li>
-							<li><a href="shop">Shop</a></li>
-							<li><a href="contact">Contact</a></li>
+							<li><a href="/">{% trans "Home" %}</a></li>
+							<li><a href="about">{% trans "About" %}</a></li>
+							<li><a href="shop">{% trans "Shop" %}</a></li>
+							<li><a href="contact">{% trans "Contact" %}</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box subscribe">
-						<h2 class="widget-title">Subscribe</h2>
+						<h2 class="widget-title">{% trans "Subscribe" %}</h2>
 						<p>{{ contacts.subscribe_text }}</p>
 						<form action="index.html">
 							<input type="email" placeholder="Email">
